<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/val_a_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_a"
            android:inputType="numberSigned|numberDecimal"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/val_b_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_b"
            android:inputType="numberSigned|numberDecimal"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/res_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/output_num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_res"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_butt_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="addClick"
            android:text="@string/add_button"
            android:textColorLink="@color/black" />

        <Button
            android:id="@+id/sub_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="subClick"
            android:text="@string/sub_button"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/mul_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="mulClick"
            android:text="@string/mul_button"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/div_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="divClick"
            android:text="@string/div_button"
            android:textColorLink="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_butt_deg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pow_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="powClick"
            android:text="@string/pow_button"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/root_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="rootClick"
            android:text="@string/root_button"
            android:textColorLink="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_butt_trig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sin_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="sinClick"
            android:text="@string/sin_button"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/cos_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="cosClick"
            android:text="@string/cos_button"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/tg_but"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:onClick="tgClick"
            android:text="@string/tg_button"
            android:textColorLink="@color/white" />
    </LinearLayout>

</LinearLayout>